test/files/neg/cloneable.check
cloneable.scala:7: warning: object X should not extend Cloneable.
object X extends Base
       ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
